Background picture showing fix
Pictures not showing from folder properly

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
   margin: 60px 10px 100px 10px;
-  background-image: url(/kuvat/snow_background.jpg);
+  background-image: url(snow_background.jpg);
   background-attachment: fixed;
 }
 
@@ -74,4 +74,5 @@ a:hover {
 figure img {
   max-height: 750px;
 }
+
 
